# package_203_project

./: CHANGELOG.md  CONTRIBUTING.md  README.md  essai-python-project-trucquimarche.ipynb  pyproject.toml
backtests/: AmberEagleAstronaut.csv  AmberSharkPlumber.csv  AmberTigerChef.csv  BlackHorseEngineer.csv  BlueCheetahPilot.csv  BlueDolphinPilot.csv  BlueElephantChef.csv  BrownSharkScientist.csv  BrownWolfNurse.csv  CrimsonEagleCarpenter.csv  CrimsonWolfSoldier.csv  GoldHorseCarpenter.csv  GoldJaguarFarmer.csv  GoldSharkPlumber.csv  GreenBearNurse.csv  GreenCobraArtist.csv  GreyElephantFirefighter.csv  GreyElephantSoldier.csv  GreyHorsePlumber.csv  IndigoFoxChef.csv  MagentaSharkFarmer.csv  OrangePantherEngineer.csv  OrangePantherPlumber.csv  PinkCheetahAstronaut.csv  PinkEaglePilot.csv  PinkWolfMechanic.csv  PurpleGorillaPhotographer.csv  SilverLeopardScientist.csv  SilverPantherBlacksmith.csv  TealCobraFarmer.csv  TealSharkArtist.csv  TealSharkTailor.csv  VioletFoxTeacher.csv  WhiteFalconArtist.csv  WhitePantherTeacher.csv  YellowCheetahFarmer.csv  YellowEagleNurse.csv
backtests_portfolio_values/: AmberEagleAstronaut_portfolio_values.csv  AmberTigerChef_portfolio_values.csv  BlackHorseEngineer_portfolio_values.csv  BlueCheetahPilot_portfolio_values.csv  BlueDolphinPilot_portfolio_values.csv  BrownWolfNurse_portfolio_values.csv  CrimsonEagleCarpenter_portfolio_values.csv  GoldHorseCarpenter_portfolio_values.csv  GoldSharkPlumber_portfolio_values.csv  GreenBearAstronaut_portfolio_values.csv  GreenBearNurse_portfolio_values.csv  GreenCobraArtist_portfolio_values.csv  (+20 more)
(+22 files in other folders)
